tests/files/flow_controller_tests/should_run/041.cmdr
x = parseBool(3.14)
print x;