tests/files/flow_controller_tests/should_fail/075.cmdr
x = false;
print coth(x);